Prevent shift+enter from submitting message, test and tidy up stylesheet

--- a/src/component/chat/ChatBox.sass
+++ b/src/component/chat/ChatBox.sass
@@ -1,9 +1,14 @@
+/**
+ * 1. We target the barebones textarea element here since Field overrides
+ *    the className attribute for its input
+ */
+
 @import '../../styles/_vars.scss';
 
 .input {
   composes: u-alignBottom from global;
 
-  textarea {
+  textarea { /* 1 */
     height: #{33/$font-size}rem;
 
     &:focus::placeholder {
@@ -13,8 +18,4 @@
       color: darken($zd-color-gainsboro, 20%);
     }
   }
-}
-
-.button {
-  composes: u-inlineBlock from global;
 }
